# cjm-nbdev-overview

./: README.md  api_docs.html  api_docs.html.md  cli.html  cli.html.md  core.html  core.html.md  dependencies.html  dependencies.html.md  generators.html  generators.html.md  index.html  parsers.html  parsers.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  tree.html  tree.html.md
cjm_nbdev_overview/: _modidx.py  api_docs.py  cli.py  core.py  dependencies.py  generators.py  parsers.py  tree.py
nbs/: 00_core.ipynb  01_parsers.ipynb  02_tree.ipynb  03_api_docs.ipynb  04_dependencies.ipynb  05_generators.ipynb  06_cli.ipynb  07_api.ipynb  api_docs.ipynb  cli.ipynb  core.ipynb  dependencies.ipynb  generators.ipynb  index.ipynb  nbdev.yml  parsers.ipynb  sidebar.yml  tree.ipynb
